# callendulla

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: backup-cron.example.sh  entrypoint.sh  supervisord.conf
docs/: agpl-compliance.md  install.md  key-rotation.md  llm.md  testing.md
migrations/: README  env.py  script.py.mako
migrations/versions/: 20260512_0830_0001_initial_schema.py
pytest-of-jetmil/: pytest-current
pytest-of-jetmil/pytest-0/: test_upgrade_and_downgrade_cyccurrent
pytest-of-jetmil/pytest-1/: test_upgrade_and_downgrade_cyccurrent
pytest-of-jetmil/pytest-2/: test_upgrade_and_downgrade_cyccurrent
src/callendulla/: __init__.py  _version.py  config.py
src/callendulla/api/: __init__.py  app.py  ical_render.py  webhook.py
src/callendulla/api/middleware/: __init__.py  agpl_source.py  rate_limit.py
src/callendulla/api/routes/: __init__.py  health.py  ical.py  source.py
src/callendulla/bot/: __init__.py  keyboards.py  main.py
src/callendulla/bot/handlers/: __init__.py  diary.py  events.py  forget.py  help.py  ical.py  reactions.py  settings.py  source.py  start.py
src/callendulla/bot/middleware/: __init__.py  user.py
src/callendulla/core/: __init__.py  observability.py  rate_limit.py  safelog.py  version.py  voice_crypto.py
src/callendulla/db/: __init__.py  base.py  models.py  session.py
src/callendulla/db/repositories/: __init__.py  event.py
src/callendulla/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py  prompt.py
src/callendulla/scheduler/: __init__.py  main.py  nudge_engine.py  quiet_hours.py  tones.py
src/callendulla/stt/: __init__.py  base.py  factory.py  openai_whisper.py
src/callendulla/tts/: __init__.py  base.py  edge.py  factory.py
tests/: conftest.py  test_alembic.py  test_api.py  test_api_webhook.py  test_bot_handlers.py  test_bot_handlers_diary.py  test_bot_handlers_events.py  test_bot_handlers_forget.py  test_bot_handlers_ical.py  test_bot_handlers_reactions.py  test_bot_handlers_settings.py  test_bot_keyboards.py  test_bot_middleware_user.py  test_config.py  test_event_repository.py  test_ical.py  test_llm_factory.py  test_llm_prompt.py  test_llm_providers.py  test_models.py  test_no_pii.py  test_nudge_engine_llm.py  test_observability.py  test_safelog.py  test_scheduler_nudge_engine.py  test_scheduler_quiet_hours.py  test_scheduler_tones.py  test_stt.py  test_tts.py  test_voice_crypto.py
tests/integration/: conftest.py  test_postgres_schema.py  test_rate_limit.py
